--- a/Scripts/SQL/1.html
+++ b/Scripts/SQL/1.html
@@ -1,3 +1,23 @@
-<p><b><a href="https://apps.nlmk.ru/sites/e-learning/SitePages/onlineEntry.aspx"target="_blank">ПОДАЙТЕ ЗАЯВКУ</a></b> на регистрацию в системе дистанционного обучения NLMK-WebTutor</p><p><b>УЖЕ ПОДАВАЛИ ЗАЯВКУ</b> и получили сообщение с подтверждением? Тогда нажимайте «ВХОД» и в открывшемся окне введите <a href="https://apps.nlmk.ru/sites/e-learning/_layouts/15/WopiFrame.aspx?sourcedoc=/sites/e-learning/instructions/%D0%9B%D0%BE%D0%B3%D0%B8%D0%BD%D1%8B%20%D1%81%D0%BE%D1%82%D1%80%D1%83%D0%B4%D0%BD%D0%B8%D0%BA%D0%BE%D0%B2%20%D0%B2%20%D0%A1%D0%94%D0%9E%20NLMK-WebTutor.pdf&action=default"target="_blank"> свой логин</a>, в поле "ПАРОЛЬ" введите пароль, указанный при регистрации, и войдите в систему.</p><p> <b>ЕСТЬ ВОПРОСЫ? </b><a href="mailto: nl-a-do@nlmk.com">Напишите нам</a> или позвоните по тел. +7 (4742) 44-62-37, вн. 46-237</p>
+<!DOCTYPE html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+<html>
 
-Уже пользовались системой NLMK-WebTutor? Тогда нажимайте «ВХОД» и в открывшемся окне введите Ваши логин и пароль в системе NLMK-WebTutor. Узнать вид своего логина можно <a href="https://apps.nlmk.ru/sites/e-learning/_layouts/15/WopiFrame.aspx?sourcedoc=/sites/e-learning/instructions/%D0%9B%D0%BE%D0%B3%D0%B8%D0%BD%D1%8B%20%D1%81%D0%BE%D1%82%D1%80%D1%83%D0%B4%D0%BD%D0%B8%D0%BA%D0%BE%D0%B2%20%D0%B2%20%D0%A1%D0%94%D0%9E%20NLMK-WebTutor.pdf&action=default" target="_blank">здесь</a>
+<head>
+    <title>TODO supply a title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+    <div>TODO write content</div>
+    <a href=""></a>
+    <a href="">
+
+    </a>
+</body>
+
+</html>
