--- a/Portal/HTML/recovery_password_server.html
+++ b/Portal/HTML/recovery_password_server.html
@@ -172,6 +172,7 @@
 		Cancel();
 	}
 	
+	orgCode2 = orgCode;
 	orgCode = String(orgCode).split("/")[0];
 	
 	if (checkUserCode() == 0) {
@@ -207,11 +208,11 @@
 				if (doc.TopElem.custom_elems.ObtainChildByKey("secretAnswer").value==answer) {
 					//проверка email на правильный формат
 					if (!(checkEmailFormat(doc.TopElem.email, false))) {
-						Request.Redirect("recovery_password.html?step=3&user="+userCode+"&org="+orgCode+"&name="+fullName+"&q="+question);
+						Request.Redirect("recovery_password.html?step=3&user="+userCode+"&org="+orgCode2+"&name="+fullName+"&q="+question);
 						Cancel();
 					} else {
 						//отправка сообщения
-						if (doc.TopElem.password != "" && !doc.TopElem.change_password && !doc.TopElem.last_data.web_banned) {
+						if (doc.TopElem.password != "") {
 							send_message("9_1", doc);
 						} else if (doc.TopElem.change_password) {
 							send_message("9_2", doc);
@@ -255,7 +256,7 @@
 		if (StrLowerCase(String(lastName)) == StrLowerCase(String(doc.TopElem.lastname))) {
 			if (doc.TopElem.custom_elems.ObtainChildByKey("secretQuestion").value != "" && doc.TopElem.custom_elems.ObtainChildByKey("secretAnswer").value != "") {
 				//есть вопрос и ответ
-				Request.Redirect("recovery_password.html?step=2&user="+userCode+"&org="+orgCode+"&name="+fullName);
+				Request.Redirect("recovery_password.html?step=2&user="+userCode+"&org="+orgCode2+"&name="+fullName);
 				Cancel();
 			} else {
 				//нет вопроса и ответа
